hphp/hack/test/typecheck/like_types/dynamic_coercion/fun_id.php.exp
File "fun_id.php", line 7, characters 12-13:
Invalid argument (Typing[4110])
File "fun_id.php", line 4, characters 12-14:
This is an int
File "fun_id.php", line 6, characters 15-21:
It is incompatible with a dynamic value
